<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="1"
        android:text="Τίτλος επιλεγμένου βιβλίου"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageButton
        android:id="@+id/btn_select_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:srcCompat="@android:drawable/ic_menu_add" />

</LinearLayout>
